--- a/static/generate.html
+++ b/static/generate.html
@@ -13,6 +13,11 @@
     <div class="container">
         <h2>生成二维码</h2>
         
+        <div class="course-info">
+            <h3 id="courseName">加载中...</h3>
+            <p id="courseId"></p>
+        </div>
+        
         <div class="qr-generator">
             <div class="qr-code-container">
                 <img id="qrCodeImage" src="" alt="生成的二维码" title="二维码" style="display: none;" />
