--- a/static/scan.html
+++ b/static/scan.html
@@ -27,6 +27,7 @@
         <div class="controls">
             <button id="startBtn">开始扫描</button>
             <button id="stopBtn" disabled>停止扫描</button>
+            <!-- <button id="selectorBtn" onclick="window.location.href='/selector'">选择已扫描课程</button> -->
         </div>
 
         <div id="status" class="status">
