--- a/static/scan.html
+++ b/static/scan.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>二维码扫描器</title>
+    <title>buptricks</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
 </head>
 <body>
     <div class="container">
-        <h2>扫描二维码</h2>
+        <!-- <h2>二维码扫描器</h2> -->
         
         <!-- 扫描器 -->
         <div class="camera-container">
