--- a/static/selector.html
+++ b/static/selector.html
@@ -3,129 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>选择二维码</title>
+    <title>buptricks</title>
     <link rel="stylesheet" href="/static/style.css">
-    <style>
-        .selector-container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .class-item {
-            padding: 15px;
-            margin: 10px 0;
-            border: 2px solid #e0e0e0;
-            border-radius: 8px;
-            background: #f9f9f9;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .class-item:hover {
-            border-color: #007bff;
-            background: #f0f8ff;
-            transform: translateY(-2px);
-        }
-
-        .class-item.expired {
-            opacity: 0.6;
-            border-color: #dc3545;
-            background: #fff5f5;
-            cursor: not-allowed;
-            pointer-events: none;
-        }
-
-        .class-item.expired:hover {
-            transform: none;
-            border-color: #dc3545;
-            background: #fff5f5;
-        }
-
-        .class-info {
-            flex: 1;
-        }
-
-        .class-id {
-            font-size: 1.2em;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 5px;
-        }
-
-        .class-details {
-            font-size: 0.9em;
-            color: #666;
-        }
-
-        .class-status {
-            padding: 5px 10px;
-            border-radius: 15px;
-            font-size: 0.8em;
-            font-weight: bold;
-        }
-
-        .status-active {
-            background: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-        }
-
-        .status-expired {
-            background: #fff3cd;
-            color: #856404;
-            border: 1px solid #ffeaa7;
-        }
-
-        .empty-state {
-            text-align: center;
-            padding: 40px;
-            color: #666;
-        }
-
-        .refresh-btn, .scan-btn {
-            margin: 10px 5px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
-        }
-
-        .refresh-btn {
-            background: #007bff;
-            color: white;
-        }
-
-        .refresh-btn:hover {
-            background: #0056b3;
-        }
-
-        .scan-btn {
-            background: #28a745;
-            color: white;
-        }
-
-        .scan-btn:hover {
-            background: #1e7e34;
-        }
-
-        .button-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="shortcut icon" href="/static/favicon.ico">
 </head>
 <body class="selector-page">
     <div class="container">
-        <h1>选择二维码课程</h1>
+        <!-- <h1>课程选择器</h1> -->
         
         <div class="selector-container">
             <div id="loadingIndicator" style="text-align: center; padding: 20px;">
